# DofusPortalWatch

./: README.md  build.sh  pyproject.toml  setup.py
dofusportalwatch/: main.py
icon/: dofusapp.icns
